ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meow-ingress
  namespace: default
spec:
  rules:
  - host: cats.com
    http:
      paths:
      - backend:
          serviceName: meow-svc
          servicePort: 80
        path: /meow
